nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/assets/styles/_app.scss
/*!
 *  Licensed to the Apache Software Foundation (ASF) under one or more
 *  contributor license agreements.  See the NOTICE file distributed with
 *  this work for additional information regarding copyright ownership.
 *  The ASF licenses this file to You under the Apache License, Version 2.0
 *  (the "License"); you may not use this file except in compliance with
 *  the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

@use 'sass:map';
@use '@angular/material' as mat;

@mixin styles() {
    /* other classes and styles */

    html,
    body {
        height: 100%;
    }

    body {
        margin: 0;
    }

    a {
        cursor: pointer;
        display: inline-block;
        text-decoration: underline;
        text-underline-offset: 3px;
    }

    .tooltip {
        max-width: 500px;
        padding: 10px;
        border-radius: 2px;
        border-width: 1px;
        font-size: 13px;
        word-wrap: break-word;
        white-space: normal;

        ul {
            list-style: disc outside;
            margin-left: 1em;
        }
    }

    .property-editor {
        font-size: 13px;
    }

    .blank,
    .empty,
    .unset,
    .sensitive {
        font-weight: normal !important;
        font-style: italic;
        opacity: 0.8;
    }

    .hidden {
        display: none;
    }

    .pointer {
        cursor: pointer;
    }

    .dialog-tab-content {
        height: 50vh;
    }

    .flex-2 {
        display: flex;
        flex: 2;
        flex-basis: 100%;
    }

    .flex-1a {
        display: flex;
        flex-direction: column;
        flex-basis: 100%;
        flex: 1;
    }

    /* overriding 3rd party styles */

    .cdk-drag-disabled {
        cursor: not-allowed !important;
    }

    .cdk-drag-placeholder {
        opacity: 0;
    }

    .cdk-drop-list-dragging {
        cursor: grabbing;
    }

    .cdk-drag:hover {
        cursor: grab;
    }

    .cdk-list {
        min-height: 34px;
        border-radius: 4px;
        overflow: hidden;
        display: block;
        user-select: none;
    }

    span.grip {
        width: 12px;
        height: 36px;
        display: block;
        line-height: 6px;
        letter-spacing: 1px;
    }

    .cdk-drag:hover {
        span.grip::after {
            content: '.. .. .. .. ..';
        }
    }

    .cdk-drag-disabled {
        font-style: italic;
    }

    .cdk-drag:hover {
        span.grip::after {
            content: '.. .. .. .. ..';
        }
    }

    //This style is needed due to an incompatibility between material and tailwind.
    .mdc-notched-outline__notch {
        border-right: none;
    }

    .CodeMirror-hints {
        font-size: 13px !important;
        z-index: 1000 !important;
        overflow-y: scroll !important;
    }

    .mat-mdc-tab-header {
        user-select: none;
    }

    .mat-mdc-icon-button {
        --mdc-icon-button-state-layer-size: 28px;
        --mdc-icon-button-icon-size: 14px;
        line-height: var(--mdc-icon-button-state-layer-size);
        padding: 0;

        &.mat-mdc-button-base.mdc-icon-button {
            padding: 0;
        }
    }

    .mat-mdc-paginator {
        background-color: unset !important;
    }

    .mdc-dialog__content {
        font-size: 14px !important;
    }
}
/* ... */

